# UserUtils

./: .gitignore  .uncrustify.cfg  ArgumentExtender_8cc.html  ArgumentExtender_8hpp.html  ArgumentExtender_8hpp_source.html  Arithmetic_8hpp.html  Arithmetic_8hpp_source.html  BoostUtils__PTreeUtils_8cc.html  CMakeLists.txt  Canvas_8cc.html  Canvas_8hpp.html  Canvas_8hpp_source.html  CmdSetAttr_8hpp_source.html  Command_8hpp.html  Command_8hpp_source.html  CommonDistro_8hpp.html  CommonDistro_8hpp_source.html  CommonXCanvas_8cc.html  CommonXCanvas_8hpp.html  CommonXCanvas_8hpp_source.html  Common_2interface_2Format_8hpp.html  Common_2interface_2Format_8hpp_source.html  Constants_8cc.html  Constants_8hpp.html  Constants_8hpp_source.html  Counter_8cc.html  Counter_8hpp.html  Counter_8hpp_source.html  DefaultEngines_8hpp.html  DefaultEngines_8hpp_source.html  DumpGenParticles_8cc.html  DumpLHERunInfo_8cc.html  DumpLumiCount_8py.html  EDHistogramAnalyzer_8hpp_source.html  EDNtupleProducer_8hpp_source.html  Filesystem_8hpp.html  Filesystem_8hpp_source.html  Flat2DCanvas_8hpp_source.html  Format_8cc.html  GSLUtil_8cc.html  (+441 more)
.github/workflows/: doxygen.yaml  doxygen_custom.sh
Common/: CMakeLists.txt  README.md
Common/doc/: ArgumentExtender.md  Common.md  format.md
Common/interface/: ArgumentExtender.hpp  Format.hpp  Maths.hpp  RapidJson.hpp  RootUtils.hpp  STLUtils.hpp  rapidjson
Common/interface/BoostUtils/: PTreeUtils.hpp
Common/interface/RootUtils/: Misc.hpp  RooArgContainer.hpp  TListUtils.hpp
Common/interface/STLUtils/: Filesystem.hpp  MinMax.hpp  OStreamUtils.hpp  StringUtils.hpp  VectorUtils.hpp
Common/interface/SystemUtils/: Command.hpp  Time.hpp
Common/scripts/: MakeExpandedHeader.sh  makeCondor.py  run_cmssw_exe.sh
Common/src/: ArgumentExtender.cc  ArgumentExtender.ipp  BoostUtils_PTreeUtils.cc  BoostUtils_PTreeUtils.ipp  BuildFile.xml  Format.cc  Maths.cc  RapidJson.cc  RootUtils_Misc.cc  RootUtils_RooArgContainer.cc  RootUtils_TListUtils.cc  STLUtils_Filesystem.cc  STLUtils_OStreamUtils.cc  STLUtils_StringUtils.cc  STLUtils_VectorUtils.ipp  SystemUtils_Command.cc  SystemUtils_Time.cc
Common/test/: BuildFile.xml  argumentextender.cc  format.cc  list1.json  list2.json  math.cc  name1.json  name2.json  pathutils.cc  ptree.cc  rapidjson.cc  system.cc  test.json  usrutil_argumentextender_test.cc  usrutil_format_test.cc  usrutil_pathutil_test.cc  usrutil_ptree_test.cc  usrutil_system_test.cc  usrutil_variadic_test.cc  variadic.cc
EDMUtils/: README.md
EDMUtils/doc/: EDMUtils.md
EDMUtils/interface/: Counter.hpp  EDHistogramAnalyzer.hpp  (+3 more)
MathUtils/: CMakeLists.txt  README.md
MathUtils/doc/: MathUtils.md  RootMathTools.md  StatUtils.md
MathUtils/interface/: Common.hpp  GSLUtil.hpp  Measurement.hpp  Miscellaneous.hpp  RooFitExt.hpp  RootMathTools.hpp  StatisticsUtil.hpp
MathUtils/interface/Measurement/: Arithmetic.hpp  CommonDistro.hpp  Format.hpp  Measurement.hpp
MathUtils/interface/RootMathTools/: DefaultEngines.hpp  RootFit.hpp  TemplateFit.hpp
MathUtils/plugins/: BuildFile.xml  MathUtils.hpp  MathUtils.xml
MathUtils/python/: pyMathUtils.py
MathUtils/src/: BuildFile.xml  Common.cc  GSLUtil.cc  Measurement.cc  Measurement_Arithmetic.cc  Measurement_CommonDistro.cc  Measurement_Format.cc  Miscellaneous.cc  RooFitExt.cc  RooFitExt_Enhance.cc  RooFitExt_KSTest.cc  RooFitExt_KSText.cc  RootMathTools_DefaultEngines.cc  RootMathTools_RootFit.cc  RootMathTools_TemplateFit.cc  StatisticsUtil.cc
MathUtils/test/: BuildFile.xml  gslstat.cc  measurement_approxfunc.cc  measurement_arithmatics.cc  measurement_format.cc  roofit_kstest.cc  roofit_templatefit.cc  roottools.cc  statutils.cc  usrutil_computing_test.cc  usrutil_measurement_approxfunc.cc  usrutil_measurement_arithmatics.cc  usrutil_measurement_format.cc  usrutil_roofit_kstest.cc
PhysUtils/: README.md
PlotUtils/: CMakeLists.txt  README.md
PlotUtils/doc/: Canvas.md  Pad1D.md  Pad2DFlat.md  PlotUtils.md  PlotUtilsArgument.md  PlotUtilsConvert.md  PlotUtilsCore.md  PlotUtilsHelper.md  StandardizePlotting.md  User_1DCanvas.md  User_2DCanvas.md
PlotUtils/interface/: Canvas.hpp  CommonXCanvas.hpp  Constants.hpp  Flat2DCanvas.hpp  Pad1D.hpp  Pad2DFlat.hpp  PlotCommon.hpp  Ratio1DCanvas.hpp  Simple1DCanvas.hpp  StandardPlotFormat.hpp
PlotUtils/python/: SignalCompare.py  __init__.py
PlotUtils/src/: BuildFile.xml  Canvas.cc  Canvas.ipp  CmdSetAttr.cc  CmdSetAttr.hpp  CommonXCanvas.cc  Constants.cc  Constants_Color.cc  Flat2DCanvas.cc  Pad1D.cc  Pad1D.ipp  Pad1D_Axis.cc  Pad1D_Draw.cc  Pad1D_Legend.cc  Pad1D_Plot.cc  Pad1D_helper.cc  Pad2DFlat.cc  Pad2DFlat_Axis.cc  Pad2DFlat_Draw.cc  Pad2DFlat_Plot.cc  PadBase.cc  PlotCommon_Cmd.cc  PlotCommon_Latex.cc  PlotCommon_MinMax.cc  PlotCommon_RooFrame.cc  PlotUtils_Selection.h  PlotUtils_Selection.xml  Ratio1DCanvas.cc  Simple1DCanvas.cc  StandardFormat_Construct.cc  StandardFormat_GenPlot.cc  StandardFormat_Table.cc
PlotUtils/test/: BuildFile.xml  basecanvas.cc  color.cc  commonxcanvas.cc  flat2dcanvas.cc  latex.cc  make_fake_standardformat_data.cc  min_max.cc  python_test.py  ratio1dcanvas.cc  simple1dcanvas.cc  standardplot_format.cc  standardplot_format.json  standardplot_signal.json  unit.cc  usrutil_basecanvas_test.cc  usrutil_ratio1dcanvas_test.cc  usrutil_simple1dcanvas_test.cc  usrutil_unit_test.cc
docs/: README.md  doxygen.cfg  footer.html  gendocs.sh  header.html  layout.xml  mainpage.md  style.scss
python/: CMakeLists.txt  MathUtils.hpp  MathUtils_rflx.cpp  MathUtils_rflx_rdict.pcm  PlotUtils.hpp  PlotUtils_rflx.cpp  PlotUtils_rflx_rdict.pcm
python/PlotUtils/: __init__.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+103 more)
(+45 files in other folders)
